[package]
name = "workspace"
description = "a command-line project manager"
version = "0.3.0"
authors = ["Matthias Totschnig <matthias@totschnig.org>","Roma Bhattacharjee <roma0615@gmail.com>"]
repository = "https://github.com/matthias-t/workspace"
license = "MIT"
readme = "README.md"

[dependencies]
clap = "2.32.0"
colored = "1.6.1"
dirs = "1.0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"
failure = "0.1.2"
term_grid = "0.1.7"

[[bin]]
name = "workspace"
path = "src/main.rs"
