[package]
name = "workspace"
description = "a command-line project manager"
version = "0.4.1"
authors = ["Matthias Totschnig <matthias@totschnig.org>","Roma Bhattacharjee <roma0615@gmail.com>"]
repository = "https://git.sr.ht/~matthias_t/workspace"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.32.0"
colored = "1.6.1"
dirs = "1.0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
failure = "0.1.2"
term_grid = "0.1.7"
serde_yaml = "0.8.8"

[[bin]]
name = "workspace"
path = "src/main.rs"
